--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
                 </div>
                 
                 <!-- Slide 3 -->
-                <div class="carousel-slide" style="background-image: url('https://images.unsplash.com/photo-1516549655669-dfbf54c8a963?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80')">
+                <div class="carousel-slide" style="background-image: url('/images/test-result.jpg')">
                     <div class="carousel-content">
                         <h1>Compassionate Medical Team</h1>
                         <p>Our skilled doctors and healthcare professionals are committed to providing personalized care with empathy and expertise.</p>
@@ -417,7 +417,7 @@
                     <p><i class="fas fa-map-marker-alt"></i> Plot 123 Naze Roundabout, Owerri</p>
                     <p><i class="fas fa-phone"></i> +234 800 123 4567</p>
                     <p><i class="fas fa-envelope"></i> info@emenikehospital.com</p>
-                    <p><i class="fas fa-clock"></i> 24/7 Opened</p>
+                    <p><i class="fas fa-clock"></i> 24/7 Open</p>
                 </div>
             </div>
             
