--- a/contact.html
+++ b/contact.html
@@ -58,11 +58,11 @@
 
         <nav class="main-nav" id="mainNav">
           <ul>
-            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="doctors.html">Doctors</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html" class="active">Contact</a></li>
             <li>
               <a class="btn-outline" href="book-appoint.html"
                 >Book Appointment</a
@@ -240,7 +240,7 @@
               </p>
               <p><i class="fas fa-phone"></i> +234 800 123 4567</p>
               <p><i class="fas fa-envelope"></i> info@emenikehospital.com</p>
-              <p><i class="fas fa-clock"></i> 24/7 Opened</p>
+              <p><i class="fas fa-clock"></i> 24/7 Open</p>
             </div>
           </div>
         </div>
