--- a/neurology.html
+++ b/neurology.html
@@ -13,7 +13,7 @@
     <!-- Top Bar -->
     <div class="topbar" id="topbar">
         <div class="container topbar-inner">
-            <div class="top-left">24/7 Opened</div>
+            <div class="top-left">24/7 Open</div>
             <div class="top-right">
                 <span><i class="fas fa-envelope"></i> info@emenikehospital.com</span>
                 <span class="phone"><i class="fas fa-phone"></i> +234 800 123 4567</span>
@@ -425,7 +425,7 @@
                     <p><i class="fas fa-map-marker-alt"></i> Plot 123 Naze Roundabout, Owerri</p>
                     <p><i class="fas fa-phone"></i> +234 800 123 4567</p>
                     <p><i class="fas fa-envelope"></i> info@emenikehospital.com</p>
-                    <p><i class="fas fa-clock"></i> 24/7 Opened</p>
+                    <p><i class="fas fa-clock"></i> 24/7 Open</p>
                 </div>
             </div>
             
