--- a/book-appoint.html
+++ b/book-appoint.html
@@ -357,7 +357,7 @@
                     <p><i class="fas fa-map-marker-alt"></i> Plot 123 Naze Roundabout, Owerri</p>
                     <p><i class="fas fa-phone"></i> +234 800 123 4567</p>
                     <p><i class="fas fa-envelope"></i> info@emenikehospital.com</p>
-                    <p><i class="fas fa-clock"></i> 24/7 Opened</p>
+                    <p><i class="fas fa-clock"></i> 24/7 Open</p>
                 </div>
             </div>
             
