--- a/orthorpedic.html
+++ b/orthorpedic.html
@@ -16,7 +16,7 @@
             <div class="top-left">24/7 Open</div>
             <div class="top-right">
                 <span><i class="fas fa-envelope"></i> info@emenikehospital.com</span>
-                <span class="phone"><i class="fas fa-phone"></i> +234 800 123 4567</span>
+                <span class="phone"><i class="fas fa-phone"></i> +234818118930</span>
                 <div class="social-icons">
                     <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
