--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     </div>
                 </div>
                 
-                <d class="service-card">
+                <div class="service-card">
                     <div class="service-icon">
                         <i class="fas fa-baby"></i>
                     </div>
@@ -276,6 +276,7 @@
                         <a href="pediatric.html" class="service-link">Learn More <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
+            </div>
         </div>
     </section>
 
@@ -429,7 +430,7 @@
     </section>
 
     <!-- Insurance Section -->
-    <section class="insurance-section">
+    <section class="insurance-section" id="insuranceSection">
         <div class="container">
             <div class="section-header">
                 <h2>Insurance Partners</h2>
