--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                         <span class="tip-category">Cardiology</span>
                         <h3 class="tip-title">5 Ways to Improve Your Heart Health</h3>
                         <p class="tip-excerpt">Learn simple lifestyle changes that can significantly reduce your risk of heart disease and improve cardiovascular health.</p>
-                        <a href="#" class="service-link">Read More <i class="fas fa-arrow-right"></i></a>
+                        <a href="cardio-blog.html" class="service-link">Read More <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
                 
@@ -412,7 +412,7 @@
                         <span class="tip-category">Mental Health</span>
                         <h3 class="tip-title">Managing Stress in Daily Life</h3>
                         <p class="tip-excerpt">Discover effective techniques to manage stress and maintain mental wellness in today's fast-paced world.</p>
-                        <a href="#" class="service-link">Read More <i class="fas fa-arrow-right"></i></a>
+                        <a href="mental-blog.html" class="service-link">Read More <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
                 
@@ -422,7 +422,7 @@
                         <span class="tip-category">Nutrition</span>
                         <h3 class="tip-title">The Importance of Balanced Nutrition</h3>
                         <p class="tip-excerpt">Understanding how proper nutrition can boost your immune system and overall health.</p>
-                        <a href="#" class="service-link">Read More <i class="fas fa-arrow-right"></i></a>
+                        <a href="nutrition-blog.html" class="service-link">Read More <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
