--- a/mental-blog.html
+++ b/mental-blog.html
@@ -44,11 +44,12 @@
 
             <nav class="main-nav" id="mainNav">
                 <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="index.html" >Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="doctors.html">Doctors</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="contact.html" class="active">Blog</a></li>
                     <li><a class="btn-outline" href="book-appoint.html">Book Appointment</a></li>
                 </ul>
             </nav>
