--- a/index.html
+++ b/index.html
@@ -439,10 +439,10 @@
             
             <div class="insurance-logos">
                 <img src="./images/Looking for health insurance in Florida_ At….jpeg" alt="Insurance A" class="insurance-logo">
-                <img src="/images/NAICOM charges shareholders for tighter monitoring of insurance firms.jpeg" alt="Insurance B" class="insurance-logo">
-                <img src="/images/Versicherung-Domains und Insurance-Domains – die Domains der Versicherungswirtschaft.jpeg" alt="Insurance C" class="insurance-logo">
-                <img src="/images/HHS Issues Major Update to Provider Relief Fund Requirements.jpeg" alt="Insurance D" class="insurance-logo">
-                <img src="https://via.placeholder.com/150x60/116643/ffffff?text=Insurance+E" alt="Insurance E" class="insurance-logo">
+                <img src="./images/NAICOM charges shareholders for tighter monitoring of insurance firms.jpeg" alt="Insurance B" class="insurance-logo">
+                <img src="./images/Versicherung-Domains und Insurance-Domains – die Domains der Versicherungswirtschaft.jpeg" alt="Insurance C" class="insurance-logo">
+                <img src="./images/HHS Issues Major Update to Provider Relief Fund Requirements.jpeg" alt="Insurance D" class="insurance-logo">
+                <img src="./images/HHS Issues Major Update to Provider Relief Fund Requirements.jpeg" alt="Insurance E" class="insurance-logo">
             </div>
         </div>
     </section>
