--- a/index.html
+++ b/index.html
@@ -320,9 +320,9 @@
                 </div>
                 
                 <div class="doctor-card">
-                    <img src="https://images.unsplash.com/photo-1594824947933-d0501ba2fe65?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80" alt="Dr. Emily Rodriguez" class="doctor-image">
+                    <img src="./images/undefined.jpeg" alt="Dr. Emily Rodriguez" class="doctor-image">
                     <div class="doctor-info">
-                        <h3 class="doctor-name">Dr. Emily Rodriguez</h3>
+                        <h3 class="doctor-name">Dr. Emilon Emebethy</h3>
                         <p class="doctor-specialty">Pediatrics</p>
                         <p class="doctor-bio">Dedicated to providing comprehensive care for children of all ages.</p>
                         <a href="doctors.html" class="service-link">View Profile <i class="fas fa-arrow-right"></i></a>
