--- a/neurology.html
+++ b/neurology.html
@@ -110,7 +110,7 @@
                 
                 <div class="about-image-container reveal">
                     <img 
-                        src="/images/brain.jpeg" 
+                        src="images/brain.jpeg" 
                         alt="Neurology Department" 
                         class="about-image"
                     >
