--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section class="hero-video">
         <div class="video-container">
             <video autoplay muted loop>
-                <source src="https://res.cloudinary.com/dl4hjr1p2/video/upload/v1762548356/VID_20251102_232021_463_bsl_l9hmzw.mp4" type="video/mp4">
+                <source src="./video/VID_20251102_232021_463_bsl.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="video-overlay"></div>
