--- a/neurology.html
+++ b/neurology.html
@@ -110,7 +110,7 @@
                 
                 <div class="about-image-container reveal">
                     <img 
-                        src="images/brain.jpeg" 
+                        src="https://res.cloudinary.com/dl4hjr1p2/image/upload/v1762550332/Human_heart_on_dark_background_with_bokeh_3d_illustration___Premium_AI-generated_image_vpcyo4.jpg" 
                         alt="Neurology Department" 
                         class="about-image"
                     >
