--- a/cardio-blog.html
+++ b/cardio-blog.html
@@ -44,7 +44,7 @@
 
             <nav class="main-nav" id="mainNav">
                 <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="doctors.html">Doctors</a></li>
