--- a/cardiology.html
+++ b/cardiology.html
@@ -196,7 +196,7 @@
                 </div>
                 
                 <div class="procedures-image">
-                    <img src="/images/heart.jpeg" alt="Cardiac Procedure">
+                    <img src="https://res.cloudinary.com/dl4hjr1p2/image/upload/v1762550332/Human_heart_on_dark_background_with_bokeh_3d_illustration___Premium_AI-generated_image_vpcyo4.jpg" alt="Cardiac Procedure">
                 </div>
             </div>
         </div>
