--- a/services.html
+++ b/services.html
@@ -49,7 +49,7 @@
                     <li><a href="services.html" class="active">Services</a></li>
                     <li><a href="doctors.html">Doctors</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a class="btn-outliner" href="book-appoint.html">Book Appointment</a></li>
+                    <li><a class="btn-outline" href="book-appoint.html">Book Appointment</a></li>
                 </ul>
             </nav>
 
