--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <p>Our 24/7 emergency department is equipped to handle all medical emergencies with speed, expertise, and compassion.</p>
                     <div class="hero-buttons">
                         <a href="book-appoint.html" class="btn-primary">Book Appointment</a>
-                        <a href="tel:+2348001234567" class="btn-secondary">Emergency: +234 800 123 4567</a>
+                        <a href="tel:+234818118930" class="btn-secondary">Emergency: +234818118930</a>
                     </div>
                     <div class="hero-features">
                         <div class="hero-feature">
