--- a/contact.html
+++ b/contact.html
@@ -238,7 +238,7 @@
                 <i class="fas fa-map-marker-alt"></i> Plot 123 Naze Roundabout,
                 Owerri
               </p>
-              <p><i class="fas fa-phone"></i> +234 800 123 4567</p>
+              <p><i class="fas fa-phone"></i> +234818118930</p>
               <p><i class="fas fa-envelope"></i> info@emenikehospital.com</p>
               <p><i class="fas fa-clock"></i> 24/7 Open</p>
             </div>
