--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <!-- Slide 1 -->
             <div class="slide active">
                 <div class="slide-content">
-                    <h1>Your Health Is Our <span style="color: #e0f7ed;">Priority</span></h1>
+                    <h1>Your Health Is Our <span style="color: white;">Priority</span></h1>
                     <p>Experience world-class healthcare with our team of expert doctors and state-of-the-art facilities. Your journey to better health starts here.</p>
                     <div class="hero-buttons">
                         <a href="book-appoint.html" class="btn-primary">Book Appointment</a>
@@ -95,7 +95,7 @@
             <!-- Slide 2 -->
             <div class="slide">
                 <div class="slide-content">
-                    <h1>Advanced Surgical <span style="color: #e0f7ed;">Excellence</span></h1>
+                    <h1>Advanced Surgical <span style="color: white;">Excellence</span></h1>
                     <p>Our state-of-the-art surgical facilities and expert surgeons ensure the best possible outcomes for all procedures.</p>
                     <div class="hero-buttons">
                         <a href="book-appoint.html" class="btn-primary">Book Appointment</a>
@@ -117,7 +117,7 @@
             <!-- Slide 3 -->
             <div class="slide">
                 <div class="slide-content">
-                    <h1>Compassionate <span style="color: #e0f7ed;">Patient Care</span></h1>
+                    <h1>Compassionate <span style="color: white;">Patient Care</span></h1>
                     <p>We believe in treating every patient with empathy, respect, and personalized attention throughout their healthcare journey.</p>
                     <div class="hero-buttons">
                         <a href="book-appoint.html" class="btn-primary">Book Appointment</a>
@@ -139,7 +139,7 @@
             <!-- Slide 4 -->
             <div class="slide">
                 <div class="slide-content">
-                    <h1>Emergency & <span style="color: #e0f7ed;">Critical Care</span></h1>
+                    <h1>Emergency & <span style="color: white;">Critical Care</span></h1>
                     <p>Our 24/7 emergency department is equipped to handle all medical emergencies with speed, expertise, and compassion.</p>
                     <div class="hero-buttons">
                         <a href="book-appoint.html" class="btn-primary">Book Appointment</a>
@@ -286,7 +286,7 @@
             <h2>Emergency Medical Care Available 24/7</h2>
             <p>Our emergency department is staffed with experienced physicians and equipped with state-of-the-art technology to handle any medical emergency.</p>
             <a href="tel:+2348001234567" class="emergency-phone">+234818118930</a>
-            <a href="" class="btn-primary">Get Directions</a>
+            <a href="https://www.google.com/maps/search/?api=1&query=Emenike+Hospital+Plot+123+Naze+Roundabout+Owerri" target="_blank" class="btn-primary">Get Directions</a>
         </div>
     </section>
 
@@ -509,7 +509,7 @@
                     <p><i class="fas fa-map-marker-alt"></i> Plot 123 Naze Roundabout, Owerri</p>
                     <p><i class="fas fa-phone"></i> +234 800 123 4567</p>
                     <p><i class="fas fa-envelope"></i> info@emenikehospital.com</p>
-                    <p><i class="fas fa-clock"></i> 24/7 Opened</p>
+                    <p><i class="fas fa-clock"></i> 24/7 Open</p>
                 </div>
             </div>
             
