--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./images/IMG-20251102-WA0019-removebg-preview.png" />
-    <title>Contact Us - Doctors Hospital</title>
+    <title>Contact Us - Emenike Hospital</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap"
       rel="stylesheet"
@@ -13,7 +13,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="css/contact.css" />
+    <link rel="stylesheet" href="css/contact.css">
   </head>
   <body>
     <!-- Top Bar -->
@@ -342,7 +342,7 @@
       </div>
     </section>
 
-    <!-- NEW: Footer with Logo -->
+    <!-- IMPROVED FOOTER SECTION -->
     <footer class="site-footer">
       <div class="container">
         <div class="footer-content">
@@ -361,7 +361,7 @@
               personalized, top-tier care across various specialties, ensuring
               every patient receives exceptional treatment.
             </p>
-            <div class="social-icons">
+            <div class="footer-social-icons">
               <a href="#" aria-label="Facebook"
                 ><i class="fab fa-facebook-f"></i
               ></a>
@@ -383,34 +383,45 @@
           <div class="footer-col">
             <h3>Quick Links</h3>
             <ul class="footer-links">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="services.html">Services</a></li>
-              <li><a href="doctors.html">Our Doctors</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+              <li><a href="about.html"><i class="fas fa-info-circle"></i> About Us</a></li>
+              <li><a href="services.html"><i class="fas fa-stethoscope"></i> Services</a></li>
+              <li><a href="doctors.html"><i class="fas fa-user-md"></i> Our Doctors</a></li>
+              <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact Us</a></li>
             </ul>
           </div>
 
           <div class="footer-col">
             <h3>Our Services</h3>
             <ul class="footer-links">
-              <li><a href="cardiology.html">Cardiology</a></li>
-              <li><a href="neurology.html">Neurology</a></li>
-              <li><a href="pediatric.html">Pediatrics</a></li>
-              <li><a href="orthorpedic.html">Orthopedics</a></li>
-              <li><a href="pediatric.html">Pediatric</a></li>
+              <li><a href="cardiology.html"><i class="fas fa-heartbeat"></i> Cardiology</a></li>
+              <li><a href="neurology.html"><i class="fas fa-brain"></i> Neurology</a></li>
+              <li><a href="pediatric.html"><i class="fas fa-baby"></i> Pediatrics</a></li>
+              <li><a href="orthorpedic.html"><i class="fas fa-bone"></i> Orthopedics</a></li>
+              <li><a href="pediatric.html"><i class="fas fa-child"></i> Pediatric Care</a></li>
             </ul>
           </div>
 
           <div class="footer-col">
             <h3>Contact Info</h3>
-            <p>
-              <i class="fas fa-map-marker-alt"></i> Plot 123 Naze Roundabout,
-              Owerri
-            </p>
-            <p><i class="fas fa-phone"></i> +234 800 123 4567</p>
-            <p><i class="fas fa-envelope"></i> info@emenikehospital.com</p>
-            <p><i class="fas fa-clock"></i> 24/7 Opened</p>
+            <div class="footer-contact-info">
+              <div class="footer-contact-item">
+                <i class="fas fa-map-marker-alt"></i>
+                <span>Plot 123 Naze Roundabout, Owerri</span>
+              </div>
+              <div class="footer-contact-item">
+                <i class="fas fa-phone"></i>
+                <span>+234 800 123 4567</span>
+              </div>
+              <div class="footer-contact-item">
+                <i class="fas fa-envelope"></i>
+                <span>info@emenikehospital.com</span>
+              </div>
+              <div class="footer-contact-item">
+                <i class="fas fa-clock"></i>
+                <span>24/7 Open</span>
+              </div>
+            </div>
           </div>
         </div>
 
