--- a/doctors.html
+++ b/doctors.html
@@ -360,7 +360,7 @@
                         <li><i class="fas fa-check-circle"></i> Research and clinical trial participation</li>
                     </ul>
                     
-                    <a href="about.html#team-section " class="btn-outline">Meet Our Leadership</a>
+                    <a href="about.html#team-section " class="btn-outlinee">Meet Our Leadership</a>
                 </div>
                 
                 <div class="leadership-image">
