--- a/contact.html
+++ b/contact.html
@@ -383,22 +383,22 @@
           <div class="footer-col">
             <h3>Quick Links</h3>
             <ul class="footer-links">
-              <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-              <li><a href="about.html"><i class="fas fa-info-circle"></i> About Us</a></li>
-              <li><a href="services.html"><i class="fas fa-stethoscope"></i> Services</a></li>
-              <li><a href="doctors.html"><i class="fas fa-user-md"></i> Our Doctors</a></li>
-              <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact Us</a></li>
+              <li><a href="index.html"></i> Home</a></li>
+              <li><a href="about.html"></i> About Us</a></li>
+              <li><a href="services.html"></i> Services</a></li>
+              <li><a href="doctors.html"></i> Our Doctors</a></li>
+              <li><a href="contact.html"></i> Contact Us</a></li>
             </ul>
           </div>
 
           <div class="footer-col">
             <h3>Our Services</h3>
             <ul class="footer-links">
-              <li><a href="cardiology.html"><i class="fas fa-heartbeat"></i> Cardiology</a></li>
-              <li><a href="neurology.html"><i class="fas fa-brain"></i> Neurology</a></li>
-              <li><a href="pediatric.html"><i class="fas fa-baby"></i> Pediatrics</a></li>
-              <li><a href="orthorpedic.html"><i class="fas fa-bone"></i> Orthopedics</a></li>
-              <li><a href="pediatric.html"><i class="fas fa-child"></i> Pediatric Care</a></li>
+              <li><a href="cardiology.html"></i> Cardiology</a></li>
+              <li><a href="neurology.html"></i> Neurology</a></li>
+              <li><a href="pediatric.html"></i> Pediatrics</a></li>
+              <li><a href="orthorpedic.html"></i> Orthopedics</a></li>
+              <li><a href="pediatric.html"></i> Pediatric Care</a></li>
             </ul>
           </div>
 
