--- a/book-appoint.html
+++ b/book-appoint.html
@@ -16,7 +16,7 @@
             <div class="top-left">24/7 Open</div>
             <div class="top-right">
                 <span><i class="fas fa-envelope"></i> info@emenikehospital.com</span>
-                <span class="phone"><i class="fas fa-phone"></i> +234 800 123 4567</span>
+                <span class="phone"><i class="fas fa-phone"></i> +234818118930</span>
                 <div class="social-icons">
                     <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
@@ -355,7 +355,7 @@
                 <div class="footer-col">
                     <h3>Contact Info</h3>
                     <p><i class="fas fa-map-marker-alt"></i> Plot 123 Naze Roundabout, Owerri</p>
-                    <p><i class="fas fa-phone"></i> +234 800 123 4567</p>
+                    <p><i class="fas fa-phone"></i>  +234818118930</p>
                     <p><i class="fas fa-envelope"></i> info@emenikehospital.com</p>
                     <p><i class="fas fa-clock"></i> 24/7 Open</p>
                 </div>
