--- a/book-appoint.html
+++ b/book-appoint.html
@@ -61,7 +61,7 @@
 
     <!-- Hero Section -->
     <section class="appointment-hero">
-        <div class="container">
+        <div class="hero-content">
             <h1>Book Your Appointment</h1>
             <p>Schedule your visit with our expert medical team in just a few simple steps. Your health journey starts here.</p>
         </div>
@@ -307,14 +307,14 @@
         </div>
     </section>
 
-    <!-- Footer with Logo -->
+    <!-- Footer with Logo - EXACT FROM INDEX PAGE -->
     <footer class="site-footer">
         <div class="container">
             <div class="footer-content">
                 <div class="footer-col">
                     <div class="footer-logo">
                         <img
-                            src="images/IMG-20251102-WA0019-removebg-preview.png"
+                           src="images/IMG-20251102-WA0019-removebg-preview.png"
                             alt="Emenike Hospital Logo"
                             class="footer-logo-image"
                         />
@@ -355,7 +355,7 @@
                 <div class="footer-col">
                     <h3>Contact Info</h3>
                     <p><i class="fas fa-map-marker-alt"></i> Plot 123 Naze Roundabout, Owerri</p>
-                    <p><i class="fas fa-phone"></i>  +234818118930</p>
+                    <p><i class="fas fa-phone"></i> +234 800 123 4567</p>
                     <p><i class="fas fa-envelope"></i> info@emenikehospital.com</p>
                     <p><i class="fas fa-clock"></i> 24/7 Open</p>
                 </div>
