--- a/contact.html
+++ b/contact.html
@@ -182,7 +182,7 @@
               </div>
               <div class="info-content">
                 <h3>Phone Numbers</h3>
-                <p>Main: +234 800 123 4567</p>
+                <p>Main: +234818118930</p>
                 <p>Emergency: +234 800 987 6543</p>
                 <p>Appointments: +234 800 555 7890</p>
               </div>
@@ -194,7 +194,7 @@
               </div>
               <div class="info-content">
                 <h3>Email Addresses</h3>
-                <p>General: info@doctorshospital.com</p>
+                <p>General: info@emenikehospital.com</p>
                 <p>Appointments: appointments@doctorshospital.com</p>
                 <p>Emergency: emergency@doctorshospital.com</p>
               </div>
