--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <!-- Hero Video Section -->
     <section class="hero-video">
         <div class="video-container">
-            <video autoplay muted loop>
+            <video autoplay muted loop playsinline>
                 <source src="https://res.cloudinary.com/dl4hjr1p2/video/upload/v1762556986/VID_20251107_144414_228_bsl_dbie3v.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
