--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     <!-- Hero Video Section -->
     <section class="hero-video">
         <div class="video-container">
-            <video autoplay muted loop playsinline>
-                <source src="https://res.cloudinary.com/dl4hjr1p2/video/upload/v1762556986/VID_20251107_144414_228_bsl_dbie3v.mp4" type="video/mp4">
+            <video autoplay muted loop>
+                <source src="./video/941e106f93177d6ac1d7f18e61aae98a_720w.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="video-overlay"></div>
@@ -507,7 +507,7 @@
                 <div class="footer-col">
                     <h3>Contact Info</h3>
                     <p><i class="fas fa-map-marker-alt"></i> Plot 123 Naze Roundabout, Owerri</p>
-                    <p><i class="fas fa-phone"></i> +234 800 123 4567</p>
+                    <p><i class="fas fa-phone"></i> +234818118930</p>
                     <p><i class="fas fa-envelope"></i> info@emenikehospital.com</p>
                     <p><i class="fas fa-clock"></i> 24/7 Open</p>
                 </div>
