--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                         </div>
                     </div>
                     
-                    <a href="about.html" class="btn-primary">Learn More About Us</a>
+                    <a href="about.html" class="btn1-primary">Learn More About Us</a>
                 </div>
                 
                 <div class="about-image-container">
