--- a/contact.html
+++ b/contact.html
@@ -402,7 +402,7 @@
             </ul>
           </div>
 
-          <div class="footer-col">
+          <div class="footer-cols">
             <h3>Contact Info</h3>
             <div class="footer-contact-info">
               <div class="footer-contact-item">
@@ -411,7 +411,7 @@
               </div>
               <div class="footer-contact-item">
                 <i class="fas fa-phone"></i>
-                <span>+234 800 123 4567</span>
+                <span>+234818118930</span>
               </div>
               <div class="footer-contact-item">
                 <i class="fas fa-envelope"></i>
