--- a/services-try.html
+++ b/services-try.html
@@ -30,18 +30,17 @@
     <!-- Header -->
     <header class="site-header">
         <div class="container header-inner">
-            <div class="logo">
+           <a href="index.html" class="logo">
                 <h1>
                     <span class="logo-text">Emenike</span>
                     <img
-                        src="images/IMG-20251102-WA0019-removebg-preview.png"
+                         src="images/IMG-20251102-WA0019-removebg-preview.png"
                         alt="Emenike Hospital Logo"
                         class="logo-image"
                     />
                     <span class="logo-text">Hospital</span>
                 </h1>
-            </div>
-
+            </a>
             <nav class="main-nav" id="mainNav">
                 <ul>
                     <li><a href="index.html">Home</a></li>
