--- a/mental-blog.html
+++ b/mental-blog.html
@@ -30,7 +30,7 @@
     <!-- Header -->
     <header class="site-header">
         <div class="container header-inner">
-           <div class="logo">
+           <a href="index.html" class="logo">
                 <h1>
                     <span class="logo-text">Emenike</span>
                     <img
@@ -40,7 +40,7 @@
                     />
                     <span class="logo-text">Hospital</span>
                 </h1>
-            </div>
+            </a>
 
             <nav class="main-nav" id="mainNav">
                 <ul>
