--- a/neurology.html
+++ b/neurology.html
@@ -30,7 +30,7 @@
     <!-- Header -->
     <header class="site-header" id="mainHeader">
         <div class="container header-inner">
-           <div class="logo">
+           <a href="index.html" class="logo">
                 <h1>
                     <span class="logo-text">Emenike</span>
                     <img
@@ -40,8 +40,7 @@
                     />
                     <span class="logo-text">Hospital</span>
                 </h1>
-            </div>
-
+            </a>
             <nav class="main-nav" id="mainNav">
                 <ul>
                     <li><a href="index.html">Home</a></li>
