--- a/pediatric.html
+++ b/pediatric.html
@@ -338,7 +338,7 @@
             <p>Schedule an appointment with our pediatric team to ensure your child receives the best possible care in a supportive, child-friendly environment</p>
             <div class="hero-buttons">
                 <a href="book-appoint.html" class="btn-primary">Book Pediatric Appointment</a>
-                <a href="contact.html" class="btn-secondary">Contact Our Team</a>
+                <a href="contact.html" class="btn1-secondary">Contact Our Team</a>
             </div>
         </div>
     </section>
