--- a/about.html
+++ b/about.html
@@ -21,9 +21,9 @@
       <div class="container topbar-inner">
         <div class="top-left">24/7 Open</div>
         <div class="top-right">
-          <span><i class="fas fa-envelope"></i> contact@clinic.com</span>
+          <span><i class="fas fa-envelope"></i>  info@emenikehospital.com</span>
           <span class="phone"
-            ><i class="fas fa-phone"></i> +234 800 123 4567</span
+            ><i class="fas fa-phone"></i> +234818118930</span
           >
           <div class="social-icons">
             <a href="#" aria-label="Facebook"
@@ -342,7 +342,7 @@
                 healthcare to the community.
               </p>
             </div>
-            <div class="timeline-year">1998</div>
+            <div class="timeline-year">2023</div>
           </div>
 
           <div class="timeline-item">
@@ -353,7 +353,7 @@
                 for cardiology, pediatrics, and orthopedics.
               </p>
             </div>
-            <div class="timeline-year">2005</div>
+            <div class="timeline-year">2024</div>
           </div>
 
           <div class="timeline-item">
@@ -364,7 +364,7 @@
                 CT scanners, enhancing our diagnostic capabilities.
               </p>
             </div>
-            <div class="timeline-year">2012</div>
+            <div class="timeline-year">2024</div>
           </div>
 
           <div class="timeline-item">
@@ -375,7 +375,7 @@
                 recognizing our commitment to quality patient care.
               </p>
             </div>
-            <div class="timeline-year">2018</div>
+            <div class="timeline-year">2024</div>
           </div>
 
           <div class="timeline-item">
@@ -386,7 +386,7 @@
                 5,000 patients during the global health crisis.
               </p>
             </div>
-            <div class="timeline-year">2020</div>
+            <div class="timeline-year">2024</div>
           </div>
 
           <div class="timeline-item">
@@ -397,7 +397,7 @@
                 community health outreach programs.
               </p>
             </div>
-            <div class="timeline-year">2023+</div>
+            <div class="timeline-year">2025</div>
           </div>
         </div>
       </div>
@@ -417,12 +417,12 @@
           <div class="team-member">
             <div class="member-image">
               <img
-                src="https://images.unsplash.com/photo-1612349317150-e413f6a5b16d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
+                src="https://res.cloudinary.com/dl4hjr1p2/image/upload/v1763165020/unnamed_rqo13a.jpg"
                 alt="Dr. Michael Adebayo"
               />
             </div>
             <div class="member-info">
-              <h3>Dr. Michael Adebayo</h3>
+              <h3>Dr. Udodirim Allen Nwachukwu</h3>
               <p>Chief Medical Director</p>
               <div class="member-social">
                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -434,13 +434,13 @@
           <div class="team-member">
             <div class="member-image">
               <img
-                src="https://images.unsplash.com/photo-1559839734-2b71ea197ec2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
+                src="https://res.cloudinary.com/dl4hjr1p2/image/upload/v1763162848/WhatsApp_Image_2025-11-14_at_21.42.57_ac6da1b6_x3o1hm.jpg"
                 alt="Dr. Sarah Johnson"
               />
             </div>
             <div class="member-info">
-              <h3>Dr. Sarah Johnson</h3>
-              <p>Head of Cardiology</p>
+              <h3>Dr. CHUKWUEBUKA NEHEMIAH IGBOKWE</h3>
+              <p>Head of clinical service</p>
               <div class="member-social">
                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
@@ -451,13 +451,13 @@
           <div class="team-member">
             <div class="member-image">
               <img
-                src="https://images.unsplash.com/photo-1594824947933-d0501ba2fe65?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
+                src="https://res.cloudinary.com/dl4hjr1p2/image/upload/v1763235142/IMG-20251114-WA0016_edit_48212840977538_tirqds.jpg"
                 alt="Dr. Chinedu Okoro"
               />
             </div>
             <div class="member-info">
-              <h3>Dr. Chinedu Okoro</h3>
-              <p>Head of Surgery</p>
+              <h3>Dr. Gogoh Chiemela  Jesse</h3>
+              <p>Specialized in accident and emergency care with special focus on critical care medicine</p>
               <div class="member-social">
                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
@@ -468,13 +468,14 @@
           <div class="team-member">
             <div class="member-image">
               <img
-                src="https://images.unsplash.com/photo-1582750433449-648ed127bb54?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
+                src="https://res.cloudinary.com/dl4hjr1p2/image/upload/v1763235363/Screenshot_20251114_215719_edit_48449501986877_otpdkg.jpg"
                 alt="Dr. Amina Bello"
               />
             </div>
             <div class="member-info">
-              <h3>Dr. Amina Bello</h3>
-              <p>Head of Pediatrics</p>
+              <h3>Dr Onyinye Allen Nwachukwu.</h3>
+              <p>Consultant Obstetrician and Gynaecologist
+Special Interests in Subfertility, Endoscopic Surgery, and Menopause</p>
               <div class="member-social">
                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
