--- a/about.html
+++ b/about.html
@@ -434,7 +434,7 @@
           <div class="team-member">
             <div class="member-image">
               <img
-                src="https://res.cloudinary.com/dl4hjr1p2/image/upload/v1763162848/WhatsApp_Image_2025-11-14_at_21.42.57_ac6da1b6_x3o1hm.jpg"
+                src="https://res.cloudinary.com/dl4hjr1p2/image/upload/v1763237940/Gemini_Generated_Image_amcp67amcp67amcp_edit_50955818015141_ltwils.png"
                 alt="Dr. Sarah Johnson"
               />
             </div>
